--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "host": "vite --host",
     "build": "vite build",
+    "gh-build": "vite build --base /dtek/ --outDir docs",
     "serve": "vite preview"
   },
   "license": "MIT",
