--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "host": "vite --host",
     "build": "vite build",
-    "gh-build": "vite build --base /dtek/ --outDir docs --mode staging",
+    "gh-build": "vite build --base /dtek/ --mode staging",
     "serve": "vite preview"
   },
   "license": "MIT",
