--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "license": "MIT",
   "devDependencies": {
     "@solid/eslint-config-base": "^0.5.0",
-    "@tailwindcss/typography": "^0.5.2",
     "@types/dompurify": "^2.3.3",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
@@ -32,6 +31,8 @@
     "vite-plugin-solid": "^2.2.5"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.2",
+    "daisyui": "^2.6.3",
     "dompurify": "^2.3.6",
     "idb-keyval": "^6.1.0",
     "solid-app-router": "^0.3.0",
