--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,6 +39,7 @@
       }
     ],
     "no-console": "off",
-    "@typescript-eslint/no-non-null-assertion": "off"
+    "@typescript-eslint/no-non-null-assertion": "off",
+    "multiline-comment-style": "off"
   }
 }
