--- a/package.json
+++ b/package.json
@@ -25,14 +25,15 @@
     "eslint-plugin-prettier": "^4.0.0",
     "postcss": "^8.4.6",
     "prettier": "^2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.8",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.5.5",
     "vite": "^2.8.4",
-    "vite-plugin-solid": "^2.2.5"
+    "vite-plugin-solid": "^2.2.5",
+    "@tailwindcss/typography": "^0.5.2",
+    "daisyui": "^2.6.3"
   },
   "dependencies": {
-    "@tailwindcss/typography": "^0.5.2",
-    "daisyui": "^2.6.3",
     "dompurify": "^2.3.6",
     "idb-keyval": "^6.1.0",
     "solid-app-router": "^0.3.0",
