--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "license": "MIT",
   "devDependencies": {
     "@solid/eslint-config-base": "^0.5.0",
+    "@tailwindcss/typography": "^0.5.2",
     "@types/dompurify": "^2.3.3",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "autoprefixer": "^10.4.2",
+    "daisyui": "^2.6.3",
     "eslint": "^8.10.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.4.0",
@@ -29,11 +31,11 @@
     "tailwindcss": "^3.0.23",
     "typescript": "^4.5.5",
     "vite": "^2.8.4",
-    "vite-plugin-solid": "^2.2.5",
-    "@tailwindcss/typography": "^0.5.2",
-    "daisyui": "^2.6.3"
+    "vite-plugin-solid": "^2.2.5"
   },
   "dependencies": {
+    "@felte/solid": "^1.0.2",
+    "@solid-primitives/refs": "^0.0.102",
     "dompurify": "^2.3.6",
     "idb-keyval": "^6.1.0",
     "solid-app-router": "^0.3.0",
