--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
   "dependencies": {
     "@amoutonbrady/solid-i18n": "^0.4.0",
     "@felte/solid": "^1.0.2",
+    "@ory/kratos-client": "^0.8.2-alpha.1",
     "@solid-primitives/refs": "^0.0.102",
+    "axios": "^0.26.1",
     "dompurify": "^2.3.6",
     "idb-keyval": "^6.1.0",
     "solid-app-router": "^0.3.0",
