--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -28,6 +28,7 @@
     "fastify": "^3.27.4",
     "fastify-autoload": "^3.10.0",
     "fastify-cors": "^6.0.3",
+    "fastify-knexjs": "^1.4.0",
     "fastify-plugin": "^3.0.0",
     "fastify-postgres": "^3.6.0",
     "fastify-sensible": "^3.1.2",
