remove old pdf extractor

--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   },
   "workspaces": [
     "packages/backend",
-    "packages/frontend",
-    "packages/linsen-pdf-extractor"
+    "packages/frontend"
   ]
 }
