--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -15,7 +15,7 @@
     "@tailwindcss/typography": "^0.5.2",
     "@types/dompurify": "^2.3.3",
     "autoprefixer": "^10.4.2",
-    "daisyui": "^2.6.3",
+    "daisyui": "^2.13.6",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.5.5",
@@ -23,14 +23,14 @@
     "vite-plugin-solid": "^2.2.5"
   },
   "dependencies": {
-    "@amoutonbrady/solid-i18n": "^0.4.0",
-    "@felte/solid": "^1.0.2",
-    "@ory/kratos-client": "^0.8.2-alpha.1",
+    "@felte/solid": "^1.1.5",
+    "@ory/kratos-client": "^0.9.0-alpha.3",
+    "@solid-primitives/i18n": "^1.0.10",
     "@solid-primitives/refs": "^0.0.102",
     "axios": "^0.26.1",
     "dompurify": "^2.3.6",
     "idb-keyval": "^6.1.0",
-    "solid-app-router": "^0.3.0",
-    "solid-js": "^1.3.8"
+    "solid-app-router": "^0.3.2",
+    "solid-js": "^1.3.14"
   }
 }
