--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -7,8 +7,6 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/main.js",
-    "dev": "fastify start -w -l info -P dist/app.js",
-    "migrate": "node-pg-migrate",
     "knex": "knex --knexfile=./knexfile.mjs"
   },
   "author": "",
@@ -18,10 +16,11 @@
     "@types/node-schedule": "^1.3.2",
     "@types/pg": "^8.6.5",
     "fastify-cli": "^2.15.0",
-    "pino-pretty": "^7.6.0",
+    "pino-pretty": "^7.5.4",
     "typescript": "^4.6.2"
   },
   "dependencies": {
+    "@ory/kratos-client": "^0.9.0-alpha.3",
     "@sinclair/typebox": "^0.23.4",
     "close-with-grace": "^1.1.0",
     "date-fns": "^2.28.0",
