--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -31,6 +31,7 @@
     "dompurify": "^2.3.6",
     "idb-keyval": "^6.1.0",
     "solid-app-router": "^0.3.2",
-    "solid-js": "^1.3.14"
+    "solid-js": "^1.3.14",
+    "solid-meta": "^0.27.3"
   }
 }
