--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@ory/kratos-client": "^0.9.0-alpha.3",
     "@sinclair/typebox": "^0.23.4",
+    "axios": "^0.26.1",
     "close-with-grace": "^1.1.0",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
