--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.3.1",
     "@tailwindcss/typography": "^0.5.2",
     "@types/dompurify": "^2.3.3",
     "autoprefixer": "^10.4.2",
@@ -28,6 +29,7 @@
     "@solid-primitives/i18n": "^1.0.10",
     "@solid-primitives/refs": "^0.0.102",
     "axios": "^0.26.1",
+    "date-fns": "^2.28.0",
     "dompurify": "^2.3.6",
     "idb-keyval": "^6.1.0",
     "solid-app-router": "^0.3.2",
