--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -18,22 +18,24 @@
     "autoprefixer": "^10.4.2",
     "daisyui": "^2.13.6",
     "postcss": "^8.4.6",
-    "tailwindcss": "^3.0.23",
-    "typescript": "^4.5.5",
-    "vite": "^2.8.4",
-    "vite-plugin-solid": "^2.2.5"
-  },
-  "dependencies": {
-    "@felte/solid": "^1.1.5",
-    "@ory/kratos-client": "^0.9.0-alpha.3",
-    "@solid-primitives/i18n": "^1.0.10",
-    "@solid-primitives/refs": "^0.0.102",
-    "axios": "^0.26.1",
-    "date-fns": "^2.28.0",
-    "dompurify": "^2.3.6",
-    "idb-keyval": "^6.1.0",
     "solid-app-router": "^0.3.2",
     "solid-js": "^1.3.14",
-    "solid-meta": "^0.27.3"
+    "solid-meta": "^0.27.3",
+    "solid-start": "0.1.0-alpha.77",
+    "solid-start-node": "0.1.0-alpha.74",
+    "tailwindcss": "^3.0.23",
+    "typescript": "^4.5.5",
+    "undici": "^4.12.2",
+    "vite": "^2.8.4",
+    "@solid-primitives/i18n": "^1.0.10",
+    "@solid-primitives/refs": "^0.0.102",
+    "date-fns": "^2.28.0",
+    "@felte/solid": "^1.1.5",
+    "@ory/kratos-client": "^0.9.0-alpha.3",
+    "axios": "^0.26.1"
+  },
+  "dependencies": {},
+  "engines": {
+    "node": ">=16"
   }
 }
