--- a/packages/frontend/nginx.conf
+++ b/packages/frontend/nginx.conf
@@ -4,12 +4,12 @@ server {
     server_name frontend;
 
     location / {
-        root /usr/share/nginx/html;
+        root /usr/src/app;
         index index.html;
         try_files $uri $uri/ /index.html;
     }
 
     location /assets/ {
-        alias /usr/share/nginx/html/assets/;
+        alias /usr/src/app/assets/;
     }
 }
