--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -12,7 +12,7 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@tailwindcss/line-clamp": "^0.3.1",
+    "@tailwindcss/line-clamp": "^0.4.0",
     "@tailwindcss/typography": "^0.5.2",
     "@types/dompurify": "^2.3.3",
     "autoprefixer": "^10.4.2",
@@ -21,7 +21,9 @@
     "tailwindcss": "^3.0.23",
     "typescript": "^4.5.5",
     "vite": "^2.8.4",
-    "vite-plugin-solid": "^2.2.5"
+    "vite-plugin-pwa": "^0.12.0",
+    "vite-plugin-solid": "^2.2.5",
+    "workbox-window": "^6.5.3"
   },
   "dependencies": {
     "@felte/solid": "^1.1.5",
